# aegis-boot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md
docs/: ALL_PHASES_COMPLETE.md  ARCHITECTURE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  LAB_TESTING.md  PROJECT_COMPLETION_SUMMARY.md  SETUP.md  TESTING.md  USECASES.md
scripts/: audit-log.sh  build.sh  gdb-debug-bootkit.py  nvram-recovery.py  qemu-automation.sh  qemu-e2e.sh  qemu-run.sh  validate-environment.sh
src/barzakh-scanner-rs/crates/barzakh-cli/: Cargo.toml
src/barzakh-scanner-rs/crates/barzakh-cli/src/: adversary_main.rs  main.rs
src/barzakh-scanner-rs/crates/barzakh-core/: Cargo.toml
src/barzakh-scanner-rs/crates/barzakh-core/src/: baseline.rs  detector.rs  lib.rs  scanner.rs
src/barzakh-scanner-rs/crates/barzakh-core/src/detectors/: android_bootctrl.rs  android_chain_validator.rs  android_dice.rs  android_init_verity.rs  android_pkvm.rs  android_rkp.rs  android_trusty.rs  android_vbmeta_chain.rs  android_vendor_dlkm.rs  arm_tbbr.rs  asus_nvram.rs  attestation.rs  bmc_spi.rs  boot_guard_km.rs  confidential_vm.rs  csme_update.rs  dell_bios_connect.rs  differ.rs  entropy.rs  esp_integrity.rs  eventlog.rs  firmware_volume.rs  hook.rs  http_boot.rs  idrac_spi.rs  insyde_smm.rs  introspection.rs  ios_ane_boot.rs  ios_iboot.rs  ios_local_policy.rs  ios_ppl.rs  ios_secure_enclave.rs  linux_bootchain.rs  lvfs_integrity.rs  mbr.rs  me_manufacturing_mode.rs  me_version_chain.rs  memory.rs  mod.rs  msi_key_reuse.rs  (+19 more)
src/barzakh-scanner-rs/crates/barzakh-core/src/reports/: mod.rs  report_generator.rs
src/barzakh-scanner-rs/crates/barzakh-core/tests/: scanner_integration.rs
tests/: README.md  corpus_validation.py  run_tests.py  validate_ci_results.py
(+129 files in other folders)
