[package]
name = "barzakh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UEFI bootkit detection engine - CLI"

[[bin]]
name = "barzakh-scanner"
path = "src/main.rs"

[dependencies]
barzakh-core = { path = "../barzakh-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
