[package]
name = "barzakh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UEFI bootkit detection engine - core library"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
sha2 = "0.10"
sha1 = "0.10"
crc32fast = "1"
aho-corasick = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
rayon = "1"
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
